bison_grammars/ampl.output
Grammar

    0 $accept: programN $end

    1 programN: PROGRAM ID ':' funcdefstar MAIN ':' body

    2 funcdefstar: funcdef funcdefstar
    3            | ε

    4 semicolonvarseqstar: ';' varseq semicolonvarseqstar
    5                    | ε

    6 funcdef: ID ':' TAKES varseq semicolonvarseqstar RETURNS type body

    7 varsvarseqsemicolonvarseqstaroptional: VARS varseq semicolonvarseqstar
    8                                      | ε

    9 body: varsvarseqsemicolonvarseqstaroptional statements

   10 commaidstar: ',' ID commaidstar
   11            | ε

   12 varseq: ID commaidstar AS type

   13 boleanorinteger: BOOLEAN
   14                | INTEGER

   15 arrayoptional: ARRAY
   16              | ε

   17 type: boleanorinteger arrayoptional

   18 semicolonstatementstar: ';' statement semicolonstatementstar
   19                       | ε

   20 statements: CHILLAX
   21           | statement semicolonstatementstar END

   22 statement: assign
   23          | backN
   24          | doN
   25          | ifN
   26          | inputN
   27          | outputN
   28          | whileN

   29 bracketsimplebracketoptionall: '[' simple ']'
   30                              | ε

   31 exprorarraysimple: expr
   32                  | ARRAY simple

   33 assign: LET ID bracketsimplebracketoptionall '=' exprorarraysimple

   34 exproptional: expr
   35             | ε

   36 backN: BACK exproptional

   37 commaexprstar: ',' expr commaexprstar
   38              | ε

   39 doN: DO ID '(' expr commaexprstar ')'

   40 elifexprcolonstatementsstar: ELIF expr ':' statements elifexprcolonstatementsstar
   41                            | ε

   42 elsecolonstatementsoptional: ELSE ':' statements
   43                            | ε

   44 ifN: IF expr ':' statements elifexprcolonstatementsstar elsecolonstatementsoptional

   45 inputN: INPUT ID bracketsimplebracketoptionall

   46 stringexpr: STRING
   47           | expr

   48 andstringexprstar: '&' stringexpr andstringexprstar
   49                  | ε

   50 outputN: OUTPUT stringexpr andstringexprstar

   51 whileN: WHILE expr ':' statements

   52 reloporsimpleoptional: relop simple
   53                      | ε

   54 expr: simple reloporsimpleoptional

   55 relop: EQ
   56      | GEQ
   57      | GT
   58      | LEQ
   59      | LT
   60      | NEQ

   61 minusoptional: '-'
   62              | ε

   63 addoptermstar: addop term addoptermstar
   64              | ε

   65 simple: minusoptional term addoptermstar

   66 addop: '-'
   67      | OR
   68      | '+'

   69 mulopfactorstar: mulop factor mulopfactorstar
   70                | ε

   71 term: factor mulopfactorstar

   72 mulop: AND
   73      | '/'
   74      | '*'
   75      | MOD

   76 bracksimpbrackexprcommaexprstaroptional: '[' simple ']'
   77                                        | '(' expr commaexprstar ')'
   78                                        | ε

   79 factor: ID bracksimpbrackexprcommaexprstaroptional
   80       | NUM
   81       | '(' expr ')'
   82       | NOT factor
   83       | TRUE
   84       | FALSE


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 48
    '(' (40) 39 77 81
    ')' (41) 39 77 81
    '*' (42) 74
    '+' (43) 68
    ',' (44) 10 37
    '-' (45) 61 66
    '/' (47) 73
    ':' (58) 1 6 40 42 44 51
    ';' (59) 4 18
    '=' (61) 33
    '[' (91) 29 76
    ']' (93) 29 76
    error (256)
    PROGRAM (258) 1
    ID (259) 1 6 10 12 33 39 45 79
    MAIN (260) 1
    TAKES (261) 6
    RETURNS (262) 6
    BOOLEAN (263) 13
    INTEGER (264) 14
    STRING (265) 46
    ARRAY (266) 15 32
    CHILLAX (267) 20
    VARS (268) 7
    AS (269) 12
    END (270) 21
    LET (271) 33
    BACK (272) 36
    DO (273) 39
    IF (274) 44
    ELIF (275) 40
    ELSE (276) 42
    INPUT (277) 45
    OUTPUT (278) 50
    WHILE (279) 51
    EQ (280) 55
    GEQ (281) 56
    GT (282) 57
    LEQ (283) 58
    LT (284) 59
    NEQ (285) 60
    OR (286) 67
    AND (287) 72
    TRUE (288) 83
    FALSE (289) 84
    MOD (290) 75
    NUM (291) 80
    NOT (292) 82


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    programN (52)
        on left: 1
        on right: 0
    funcdefstar (53)
        on left: 2 3
        on right: 1 2
    semicolonvarseqstar (54)
        on left: 4 5
        on right: 4 6 7
    funcdef (55)
        on left: 6
        on right: 2
    varsvarseqsemicolonvarseqstaroptional (56)
        on left: 7 8
        on right: 9
    body (57)
        on left: 9
        on right: 1 6
    commaidstar (58)
        on left: 10 11
        on right: 10 12
    varseq (59)
        on left: 12
        on right: 4 6 7
    boleanorinteger (60)
        on left: 13 14
        on right: 17
    arrayoptional (61)
        on left: 15 16
        on right: 17
    type (62)
        on left: 17
        on right: 6 12
    semicolonstatementstar (63)
        on left: 18 19
        on right: 18 21
    statements (64)
        on left: 20 21
        on right: 9 40 42 44 51
    statement (65)
        on left: 22 23 24 25 26 27 28
        on right: 18 21
    bracketsimplebracketoptionall (66)
        on left: 29 30
        on right: 33 45
    exprorarraysimple (67)
        on left: 31 32
        on right: 33
    assign (68)
        on left: 33
        on right: 22
    exproptional (69)
        on left: 34 35
        on right: 36
    backN (70)
        on left: 36
        on right: 23
    commaexprstar (71)
        on left: 37 38
        on right: 37 39 77
    doN (72)
        on left: 39
        on right: 24
    elifexprcolonstatementsstar (73)
        on left: 40 41
        on right: 40 44
    elsecolonstatementsoptional (74)
        on left: 42 43
        on right: 44
    ifN (75)
        on left: 44
        on right: 25
    inputN (76)
        on left: 45
        on right: 26
    stringexpr (77)
        on left: 46 47
        on right: 48 50
    andstringexprstar (78)
        on left: 48 49
        on right: 48 50
    outputN (79)
        on left: 50
        on right: 27
    whileN (80)
        on left: 51
        on right: 28
    reloporsimpleoptional (81)
        on left: 52 53
        on right: 54
    expr (82)
        on left: 54
        on right: 31 34 37 39 40 44 47 51 77 81
    relop (83)
        on left: 55 56 57 58 59 60
        on right: 52
    minusoptional (84)
        on left: 61 62
        on right: 65
    addoptermstar (85)
        on left: 63 64
        on right: 63 65
    simple (86)
        on left: 65
        on right: 29 32 52 54 76
    addop (87)
        on left: 66 67 68
        on right: 63
    mulopfactorstar (88)
        on left: 69 70
        on right: 69 71
    term (89)
        on left: 71
        on right: 63 65
    mulop (90)
        on left: 72 73 74 75
        on right: 69
    bracksimpbrackexprcommaexprstaroptional (91)
        on left: 76 77 78
        on right: 79
    factor (92)
        on left: 79 80 81 82 83 84
        on right: 69 71 82


State 0

    0 $accept: • programN $end
    1 programN: • PROGRAM ID ':' funcdefstar MAIN ':' body

    PROGRAM  shift, and go to state 1

    programN  go to state 2


State 1

    1 programN: PROGRAM • ID ':' funcdefstar MAIN ':' body

    ID  shift, and go to state 3


State 2

    0 $accept: programN • $end

    $end  shift, and go to state 4


State 3

    1 programN: PROGRAM ID • ':' funcdefstar MAIN ':' body

    ':'  shift, and go to state 5


State 4

    0 $accept: programN $end •

    $default  accept


State 5

    1 programN: PROGRAM ID ':' • funcdefstar MAIN ':' body
    2 funcdefstar: • funcdef funcdefstar
    3            | ε •
    6 funcdef: • ID ':' TAKES varseq semicolonvarseqstar RETURNS type body

    ID  shift, and go to state 6

    MAIN  reduce using rule 3 (funcdefstar)

    funcdefstar  go to state 7
    funcdef      go to state 8


State 6

    6 funcdef: ID • ':' TAKES varseq semicolonvarseqstar RETURNS type body

    ':'  shift, and go to state 9


State 7

    1 programN: PROGRAM ID ':' funcdefstar • MAIN ':' body

    MAIN  shift, and go to state 10


State 8

    2 funcdefstar: • funcdef funcdefstar
    2            | funcdef • funcdefstar
    3            | ε •
    6 funcdef: • ID ':' TAKES varseq semicolonvarseqstar RETURNS type body

    ID  shift, and go to state 6

    MAIN  reduce using rule 3 (funcdefstar)

    funcdefstar  go to state 11
    funcdef      go to state 8


State 9

    6 funcdef: ID ':' • TAKES varseq semicolonvarseqstar RETURNS type body

    TAKES  shift, and go to state 12


State 10

    1 programN: PROGRAM ID ':' funcdefstar MAIN • ':' body

    ':'  shift, and go to state 13


State 11

    2 funcdefstar: funcdef funcdefstar •

    MAIN  reduce using rule 2 (funcdefstar)


State 12

    6 funcdef: ID ':' TAKES • varseq semicolonvarseqstar RETURNS type body
   12 varseq: • ID commaidstar AS type

    ID  shift, and go to state 14

    varseq  go to state 15


State 13

    1 programN: PROGRAM ID ':' funcdefstar MAIN ':' • body
    7 varsvarseqsemicolonvarseqstaroptional: • VARS varseq semicolonvarseqstar
    8                                      | ε •
    9 body: • varsvarseqsemicolonvarseqstaroptional statements

    VARS  shift, and go to state 16

    CHILLAX  reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    LET      reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    BACK     reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    DO       reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    IF       reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    INPUT    reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    OUTPUT   reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    WHILE    reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)

    varsvarseqsemicolonvarseqstaroptional  go to state 17
    body                                   go to state 18


State 14

   10 commaidstar: • ',' ID commaidstar
   11            | ε •
   12 varseq: ID • commaidstar AS type

    ','  shift, and go to state 19

    AS  reduce using rule 11 (commaidstar)

    commaidstar  go to state 20


State 15

    4 semicolonvarseqstar: • ';' varseq semicolonvarseqstar
    5                    | ε •
    6 funcdef: ID ':' TAKES varseq • semicolonvarseqstar RETURNS type body

    ';'  shift, and go to state 21

    RETURNS  reduce using rule 5 (semicolonvarseqstar)

    semicolonvarseqstar  go to state 22


State 16

    7 varsvarseqsemicolonvarseqstaroptional: VARS • varseq semicolonvarseqstar
   12 varseq: • ID commaidstar AS type

    ID  shift, and go to state 152

    varseq  go to state 23


State 17

    9 body: varsvarseqsemicolonvarseqstaroptional • statements
   20 statements: • CHILLAX
   21           | • statement semicolonstatementstar END
   22 statement: • assign
   23          | • backN
   24          | • doN
   25          | • ifN
   26          | • inputN
   27          | • outputN
   28          | • whileN
   33 assign: • LET ID bracketsimplebracketoptionall '=' exprorarraysimple
   36 backN: • BACK exproptional
   39 doN: • DO ID '(' expr commaexprstar ')'
   44 ifN: • IF expr ':' statements elifexprcolonstatementsstar elsecolonstatementsoptional
   45 inputN: • INPUT ID bracketsimplebracketoptionall
   50 outputN: • OUTPUT stringexpr andstringexprstar
   51 whileN: • WHILE expr ':' statements

    CHILLAX  shift, and go to state 24
    LET      shift, and go to state 25
    BACK     shift, and go to state 26
    DO       shift, and go to state 27
    IF       shift, and go to state 28
    INPUT    shift, and go to state 29
    OUTPUT   shift, and go to state 30
    WHILE    shift, and go to state 31

    statements  go to state 32
    statement   go to state 33
    assign      go to state 34
    backN       go to state 35
    doN         go to state 36
    ifN         go to state 37
    inputN      go to state 38
    outputN     go to state 39
    whileN      go to state 40


State 18

    1 programN: PROGRAM ID ':' funcdefstar MAIN ':' body •

    $end  reduce using rule 1 (programN)


State 19

   10 commaidstar: ',' • ID commaidstar

    ID  shift, and go to state 41


State 20

   12 varseq: ID commaidstar • AS type

    AS  shift, and go to state 42


State 21

    4 semicolonvarseqstar: ';' • varseq semicolonvarseqstar
   12 varseq: • ID commaidstar AS type

    ID  shift, and go to state 14

    varseq  go to state 43


State 22

    6 funcdef: ID ':' TAKES varseq semicolonvarseqstar • RETURNS type body

    RETURNS  shift, and go to state 44


State 23

    4 semicolonvarseqstar: • ';' varseq semicolonvarseqstar
    5                    | ε •
    7 varsvarseqsemicolonvarseqstaroptional: VARS varseq • semicolonvarseqstar

    ';'  shift, and go to state 153

    CHILLAX  reduce using rule 5 (semicolonvarseqstar)
    LET      reduce using rule 5 (semicolonvarseqstar)
    BACK     reduce using rule 5 (semicolonvarseqstar)
    DO       reduce using rule 5 (semicolonvarseqstar)
    IF       reduce using rule 5 (semicolonvarseqstar)
    INPUT    reduce using rule 5 (semicolonvarseqstar)
    OUTPUT   reduce using rule 5 (semicolonvarseqstar)
    WHILE    reduce using rule 5 (semicolonvarseqstar)

    semicolonvarseqstar  go to state 45


State 24

   20 statements: CHILLAX •

    $end  reduce using rule 20 (statements)


State 25

   33 assign: LET • ID bracketsimplebracketoptionall '=' exprorarraysimple

    ID  shift, and go to state 46


State 26

   34 exproptional: • expr
   35             | ε •
   36 backN: BACK • exproptional
   54 expr: • simple reloporsimpleoptional
   61 minusoptional: • '-'
   62              | ε •
   65 simple: • minusoptional term addoptermstar

    '-'  shift, and go to state 47

    ID     reduce using rule 62 (minusoptional)
    END    reduce using rule 35 (exproptional)
    TRUE   reduce using rule 62 (minusoptional)
    FALSE  reduce using rule 62 (minusoptional)
    NUM    reduce using rule 62 (minusoptional)
    NOT    reduce using rule 62 (minusoptional)
    ';'    reduce using rule 35 (exproptional)
    '('    reduce using rule 62 (minusoptional)

    exproptional   go to state 48
    expr           go to state 49
    minusoptional  go to state 50
    simple         go to state 51


State 27

   39 doN: DO • ID '(' expr commaexprstar ')'

    ID  shift, and go to state 52


State 28

   44 ifN: IF • expr ':' statements elifexprcolonstatementsstar elsecolonstatementsoptional
   54 expr: • simple reloporsimpleoptional
   61 minusoptional: • '-'
   62              | ε •
   65 simple: • minusoptional term addoptermstar

    '-'  shift, and go to state 47

    ID     reduce using rule 62 (minusoptional)
    TRUE   reduce using rule 62 (minusoptional)
    FALSE  reduce using rule 62 (minusoptional)
    NUM    reduce using rule 62 (minusoptional)
    NOT    reduce using rule 62 (minusoptional)
    '('    reduce using rule 62 (minusoptional)

    expr           go to state 53
    minusoptional  go to state 154
    simple         go to state 155


State 29

   45 inputN: INPUT • ID bracketsimplebracketoptionall

    ID  shift, and go to state 54


State 30

   46 stringexpr: • STRING
   47           | • expr
   50 outputN: OUTPUT • stringexpr andstringexprstar
   54 expr: • simple reloporsimpleoptional
   61 minusoptional: • '-'
   62              | ε •
   65 simple: • minusoptional term addoptermstar

    STRING  shift, and go to state 55
    '-'     shift, and go to state 47

    ID     reduce using rule 62 (minusoptional)
    TRUE   reduce using rule 62 (minusoptional)
    FALSE  reduce using rule 62 (minusoptional)
    NUM    reduce using rule 62 (minusoptional)
    NOT    reduce using rule 62 (minusoptional)
    '('    reduce using rule 62 (minusoptional)

    stringexpr     go to state 56
    expr           go to state 57
    minusoptional  go to state 156
    simple         go to state 157


State 31

   51 whileN: WHILE • expr ':' statements
   54 expr: • simple reloporsimpleoptional
   61 minusoptional: • '-'
   62              | ε •
   65 simple: • minusoptional term addoptermstar

    '-'  shift, and go to state 47

    ID     reduce using rule 62 (minusoptional)
    TRUE   reduce using rule 62 (minusoptional)
    FALSE  reduce using rule 62 (minusoptional)
    NUM    reduce using rule 62 (minusoptional)
    NOT    reduce using rule 62 (minusoptional)
    '('    reduce using rule 62 (minusoptional)

    expr           go to state 58
    minusoptional  go to state 154
    simple         go to state 155


State 32

    9 body: varsvarseqsemicolonvarseqstaroptional statements •

    $end  reduce using rule 9 (body)


State 33

   18 semicolonstatementstar: • ';' statement semicolonstatementstar
   19                       | ε •
   21 statements: statement • semicolonstatementstar END

    ';'  shift, and go to state 59

    END  reduce using rule 19 (semicolonstatementstar)

    semicolonstatementstar  go to state 60


State 34

   22 statement: assign •

    END  reduce using rule 22 (statement)
    ';'  reduce using rule 22 (statement)


State 35

   23 statement: backN •

    END  reduce using rule 23 (statement)
    ';'  reduce using rule 23 (statement)


State 36

   24 statement: doN •

    END  reduce using rule 24 (statement)
    ';'  reduce using rule 24 (statement)


State 37

   25 statement: ifN •

    END  reduce using rule 25 (statement)
    ';'  reduce using rule 25 (statement)


State 38

   26 statement: inputN •

    END  reduce using rule 26 (statement)
    ';'  reduce using rule 26 (statement)


State 39

   27 statement: outputN •

    END  reduce using rule 27 (statement)
    ';'  reduce using rule 27 (statement)


State 40

   28 statement: whileN •

    END  reduce using rule 28 (statement)
    ';'  reduce using rule 28 (statement)


State 41

   10 commaidstar: • ',' ID commaidstar
   10            | ',' ID • commaidstar
   11            | ε •

    ','  shift, and go to state 19

    AS  reduce using rule 11 (commaidstar)

    commaidstar  go to state 61


State 42

   12 varseq: ID commaidstar AS • type
   13 boleanorinteger: • BOOLEAN
   14                | • INTEGER
   17 type: • boleanorinteger arrayoptional

    BOOLEAN  shift, and go to state 62
    INTEGER  shift, and go to state 63

    boleanorinteger  go to state 64
    type             go to state 65


State 43

    4 semicolonvarseqstar: • ';' varseq semicolonvarseqstar
    4                    | ';' varseq • semicolonvarseqstar
    5                    | ε •

    ';'  shift, and go to state 21

    RETURNS  reduce using rule 5 (semicolonvarseqstar)

    semicolonvarseqstar  go to state 66


State 44

    6 funcdef: ID ':' TAKES varseq semicolonvarseqstar RETURNS • type body
   13 boleanorinteger: • BOOLEAN
   14                | • INTEGER
   17 type: • boleanorinteger arrayoptional

    BOOLEAN  shift, and go to state 158
    INTEGER  shift, and go to state 159

    boleanorinteger  go to state 160
    type             go to state 67


State 45

    7 varsvarseqsemicolonvarseqstaroptional: VARS varseq semicolonvarseqstar •

    CHILLAX  reduce using rule 7 (varsvarseqsemicolonvarseqstaroptional)
    LET      reduce using rule 7 (varsvarseqsemicolonvarseqstaroptional)
    BACK     reduce using rule 7 (varsvarseqsemicolonvarseqstaroptional)
    DO       reduce using rule 7 (varsvarseqsemicolonvarseqstaroptional)
    IF       reduce using rule 7 (varsvarseqsemicolonvarseqstaroptional)
    INPUT    reduce using rule 7 (varsvarseqsemicolonvarseqstaroptional)
    OUTPUT   reduce using rule 7 (varsvarseqsemicolonvarseqstaroptional)
    WHILE    reduce using rule 7 (varsvarseqsemicolonvarseqstaroptional)


State 46

   29 bracketsimplebracketoptionall: • '[' simple ']'
   30                              | ε •
   33 assign: LET ID • bracketsimplebracketoptionall '=' exprorarraysimple

    '['  shift, and go to state 68

    '='  reduce using rule 30 (bracketsimplebracketoptionall)

    bracketsimplebracketoptionall  go to state 69


State 47

   61 minusoptional: '-' •

    ID     reduce using rule 61 (minusoptional)
    TRUE   reduce using rule 61 (minusoptional)
    FALSE  reduce using rule 61 (minusoptional)
    NUM    reduce using rule 61 (minusoptional)
    NOT    reduce using rule 61 (minusoptional)
    '('    reduce using rule 61 (minusoptional)


State 48

   36 backN: BACK exproptional •

    END  reduce using rule 36 (backN)
    ';'  reduce using rule 36 (backN)


State 49

   34 exproptional: expr •

    END  reduce using rule 34 (exproptional)
    ';'  reduce using rule 34 (exproptional)


State 50

   65 simple: minusoptional • term addoptermstar
   71 term: • factor mulopfactorstar
   79 factor: • ID bracksimpbrackexprcommaexprstaroptional
   80       | • NUM
   81       | • '(' expr ')'
   82       | • NOT factor
   83       | • TRUE
   84       | • FALSE

    ID     shift, and go to state 70
    TRUE   shift, and go to state 71
    FALSE  shift, and go to state 72
    NUM    shift, and go to state 73
    NOT    shift, and go to state 74
    '('    shift, and go to state 75

    term    go to state 76
    factor  go to state 77


State 51

   52 reloporsimpleoptional: • relop simple
   53                      | ε •
   54 expr: simple • reloporsimpleoptional
   55 relop: • EQ
   56      | • GEQ
   57      | • GT
   58      | • LEQ
   59      | • LT
   60      | • NEQ

    EQ   shift, and go to state 78
    GEQ  shift, and go to state 79
    GT   shift, and go to state 80
    LEQ  shift, and go to state 81
    LT   shift, and go to state 82
    NEQ  shift, and go to state 83

    END  reduce using rule 53 (reloporsimpleoptional)
    ';'  reduce using rule 53 (reloporsimpleoptional)

    reloporsimpleoptional  go to state 84
    relop                  go to state 85


State 52

   39 doN: DO ID • '(' expr commaexprstar ')'

    '('  shift, and go to state 86


State 53

   44 ifN: IF expr • ':' statements elifexprcolonstatementsstar elsecolonstatementsoptional

    ':'  shift, and go to state 87


State 54

   29 bracketsimplebracketoptionall: • '[' simple ']'
   30                              | ε •
   45 inputN: INPUT ID • bracketsimplebracketoptionall

    '['  shift, and go to state 161

    END  reduce using rule 30 (bracketsimplebracketoptionall)
    ';'  reduce using rule 30 (bracketsimplebracketoptionall)

    bracketsimplebracketoptionall  go to state 88


State 55

   46 stringexpr: STRING •

    END  reduce using rule 46 (stringexpr)
    ';'  reduce using rule 46 (stringexpr)
    '&'  reduce using rule 46 (stringexpr)


State 56

   48 andstringexprstar: • '&' stringexpr andstringexprstar
   49                  | ε •
   50 outputN: OUTPUT stringexpr • andstringexprstar

    '&'  shift, and go to state 89

    END  reduce using rule 49 (andstringexprstar)
    ';'  reduce using rule 49 (andstringexprstar)

    andstringexprstar  go to state 90


State 57

   47 stringexpr: expr •

    END  reduce using rule 47 (stringexpr)
    ';'  reduce using rule 47 (stringexpr)
    '&'  reduce using rule 47 (stringexpr)


State 58

   51 whileN: WHILE expr • ':' statements

    ':'  shift, and go to state 91


State 59

   18 semicolonstatementstar: ';' • statement semicolonstatementstar
   22 statement: • assign
   23          | • backN
   24          | • doN
   25          | • ifN
   26          | • inputN
   27          | • outputN
   28          | • whileN
   33 assign: • LET ID bracketsimplebracketoptionall '=' exprorarraysimple
   36 backN: • BACK exproptional
   39 doN: • DO ID '(' expr commaexprstar ')'
   44 ifN: • IF expr ':' statements elifexprcolonstatementsstar elsecolonstatementsoptional
   45 inputN: • INPUT ID bracketsimplebracketoptionall
   50 outputN: • OUTPUT stringexpr andstringexprstar
   51 whileN: • WHILE expr ':' statements

    LET     shift, and go to state 25
    BACK    shift, and go to state 26
    DO      shift, and go to state 27
    IF      shift, and go to state 28
    INPUT   shift, and go to state 29
    OUTPUT  shift, and go to state 30
    WHILE   shift, and go to state 31

    statement  go to state 92
    assign     go to state 34
    backN      go to state 35
    doN        go to state 36
    ifN        go to state 37
    inputN     go to state 38
    outputN    go to state 39
    whileN     go to state 40


State 60

   21 statements: statement semicolonstatementstar • END

    END  shift, and go to state 93


State 61

   10 commaidstar: ',' ID commaidstar •

    AS  reduce using rule 10 (commaidstar)


State 62

   13 boleanorinteger: BOOLEAN •

    RETURNS  reduce using rule 13 (boleanorinteger)
    ARRAY    reduce using rule 13 (boleanorinteger)
    ';'      reduce using rule 13 (boleanorinteger)


State 63

   14 boleanorinteger: INTEGER •

    RETURNS  reduce using rule 14 (boleanorinteger)
    ARRAY    reduce using rule 14 (boleanorinteger)
    ';'      reduce using rule 14 (boleanorinteger)


State 64

   15 arrayoptional: • ARRAY
   16              | ε •
   17 type: boleanorinteger • arrayoptional

    ARRAY  shift, and go to state 94

    RETURNS  reduce using rule 16 (arrayoptional)
    ';'      reduce using rule 16 (arrayoptional)

    arrayoptional  go to state 95


State 65

   12 varseq: ID commaidstar AS type •

    RETURNS  reduce using rule 12 (varseq)
    ';'      reduce using rule 12 (varseq)


State 66

    4 semicolonvarseqstar: ';' varseq semicolonvarseqstar •

    RETURNS  reduce using rule 4 (semicolonvarseqstar)


State 67

    6 funcdef: ID ':' TAKES varseq semicolonvarseqstar RETURNS type • body
    7 varsvarseqsemicolonvarseqstaroptional: • VARS varseq semicolonvarseqstar
    8                                      | ε •
    9 body: • varsvarseqsemicolonvarseqstaroptional statements

    VARS  shift, and go to state 16

    CHILLAX  reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    LET      reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    BACK     reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    DO       reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    IF       reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    INPUT    reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    OUTPUT   reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)
    WHILE    reduce using rule 8 (varsvarseqsemicolonvarseqstaroptional)

    varsvarseqsemicolonvarseqstaroptional  go to state 162
    body                                   go to state 96


State 68

   29 bracketsimplebracketoptionall: '[' • simple ']'
   61 minusoptional: • '-'
   62              | ε •
   65 simple: • minusoptional term addoptermstar

    '-'  shift, and go to state 47

    ID     reduce using rule 62 (minusoptional)
    TRUE   reduce using rule 62 (minusoptional)
    FALSE  reduce using rule 62 (minusoptional)
    NUM    reduce using rule 62 (minusoptional)
    NOT    reduce using rule 62 (minusoptional)
    '('    reduce using rule 62 (minusoptional)

    minusoptional  go to state 163
    simple         go to state 97


State 69

   33 assign: LET ID bracketsimplebracketoptionall • '=' exprorarraysimple

    '='  shift, and go to state 98


State 70

   76 bracksimpbrackexprcommaexprstaroptional: • '[' simple ']'
   77                                        | • '(' expr commaexprstar ')'
   78                                        | ε •
   79 factor: ID • bracksimpbrackexprcommaexprstaroptional

    '['  shift, and go to state 99
    '('  shift, and go to state 100

    END  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    EQ   reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    GEQ  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    GT   reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    LEQ  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    LT   reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    NEQ  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    OR   reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    AND  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    MOD  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    ';'  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    '-'  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    '+'  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    '/'  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)
    '*'  reduce using rule 78 (bracksimpbrackexprcommaexprstaroptional)

    bracksimpbrackexprcommaexprstaroptional  go to state 101


State 71

   83 factor: TRUE •

    END  reduce using rule 83 (factor)
    EQ   reduce using rule 83 (factor)
    GEQ  reduce using rule 83 (factor)
    GT   reduce using rule 83 (factor)
    LEQ  reduce using rule 83 (factor)
    LT   reduce using rule 83 (factor)
    NEQ  reduce using rule 83 (factor)
    OR   reduce using rule 83 (factor)
    AND  reduce using rule 83 (factor)
    MOD  reduce using rule 83 (factor)
    ';'  reduce using rule 83 (factor)
    '-'  reduce using rule 83 (factor)
    '+'  reduce using rule 83 (factor)
    '/'  reduce using rule 83 (factor)
    '*'  reduce using rule 83 (factor)


State 72

   84 factor: FALSE •

    END  reduce using rule 84 (factor)
    EQ   reduce using rule 84 (factor)
    GEQ  reduce using rule 84 (factor)
    GT   reduce using rule 84 (factor)
    LEQ  reduce using rule 84 (factor)
    LT   reduce using rule 84 (factor)
    NEQ  reduce using rule 84 (factor)
    OR   reduce using rule 84 (factor)
    AND  reduce using rule 84 (factor)
    MOD  reduce using rule 84 (factor)
    ';'  reduce using rule 84 (factor)
    '-'  reduce using rule 84 (factor)
    '+'  reduce using rule 84 (factor)
    '/'  reduce using rule 84 (factor)
    '*'  reduce using rule 84 (factor)


State 73

   80 factor: NUM •
